Added GitHub link

--- a/index.html
+++ b/index.html
@@ -182,6 +182,8 @@
 		<A HREF="https://github.com/ccrisan/motioneye/wiki">MotionEye Wiki</A>
 		<LI>
 		<A HREF="./motioneye">Local Camera Images</A>
+		<LI>
+          	<A HREF="https://github.com/mikeoc61/CHIP-Web-Site">GitHub Repository</A>
 	       </BL>
 
           </div>
