Reformatted and added Cam 2

--- a/index.html
+++ b/index.html
@@ -169,22 +169,23 @@
         <div class="content_section_text">
 
 	  <p>
-	      <BL>
+	      <UL style="list-style-type:none">
 		<LI>
 		<A HREF="./cgi-bin/stats.sh">CHIP Stats</A>
 		<LI>
-		<A HREF="http://mikeoc.ddns.net:8081">Streaming Webcam(s)</A>
+		Streaming: <A HREF="http://mikeoc.ddns.net:8081">
+			Cam 1</A> <A HREF="http://mikeoc.ddns.net:8082"> Cam 2</A>
 		<LI>
 		<A HREF="http://mikeoc.ddns.net:8765">MotionEye Config</A>
 		<LI>
-		<A HREF="./motion_guide.html">Motion User Guide</A>
-		<LI>
-		<A HREF="https://github.com/ccrisan/motioneye/wiki">MotionEye Wiki</A>
+		<A HREF="./motion_guide.html">Motion User Guide</A> | 
+			<A HREF="https://github.com/ccrisan/motioneye/wiki">MotionEye Wiki</A>
 		<LI>
 		<A HREF="./motioneye">Local Camera Images</A>
 		<LI>
           	<A HREF="https://github.com/mikeoc61/CHIP-Web-Site">GitHub Repository</A>
-	       </BL>
+	       </UL>
+	      </p>
 
           </div>
 
@@ -192,7 +193,8 @@
 
 	<br>
 
-        <img src="http://mikeoc.ddns.net:8765/picture/1/current/" width="640" height="480">
+        <img src="http://mikeoc.ddns.net:8765/picture/1/current/" width="320" height="240">
+        <img src="http://mikeoc.ddns.net:8765/picture/2/current/" width="320" height="240">
 
     	</div>
   </body>
