--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!--									-->
+<!-- HTML for CHIP Webcam Project					-->
+<!-- This file belongs in /var/www/html directory for use with apache2  -->
+<!-- Adapted from default apache2 index.html by Michael E. O'Connor     -->
+<!--           								-->
+<!-- Last update: 11/13/17 						-->
+<!------------------------------------------------------------------------>
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Mikeoc Webcam Page</title>
@@ -11,65 +19,52 @@
 
   body, html {
     padding: 3px 3px 3px 3px;
-
     background-color: #D8DBE2;
-
     font-family: Verdana, sans-serif;
-    font-size: 11pt;
+    font-size: 12pt;
     text-align: center;
   }
 
   div.main_page {
     position: relative;
     display: table;
-
     width: 800px;
-
     margin-bottom: 3px;
     margin-left: auto;
     margin-right: auto;
     padding: 0px 0px 0px 0px;
-
     border-width: 2px;
     border-color: #212738;
     border-style: solid;
-
     background-color: #FFFFFF;
-
     text-align: center;
   }
 
   div.page_header {
     height: 99px;
     width: 100%;
-
     background-color: #F5F6F7;
   }
 
   div.page_header span {
     margin: 15px 0px 0px 50px;
-
     font-size: 180%;
     font-weight: bold;
   }
 
   div.page_header img {
     margin: 3px 0px 0px 40px;
-
-    border: 0px 0px 0px;
+    border: 1px 1px 1px;
   }
 
   div.content_section {
     margin: 3px 3px 3px 3px;
-
     background-color: #FFFFFF;
-
     text-align: left;
   }
 
   div.content_section_text {
     padding: 4px 8px 4px 8px;
-
     color: #000000;
     font-size: 100%;
   }
@@ -77,13 +72,10 @@
   div.content_section_text pre {
     margin: 8px 0px 8px 0px;
     padding: 8px 8px 8px 8px;
-
     border-width: 1px;
     border-style: dotted;
     border-color: #000000;
-
     background-color: #F5F6F7;
-
     font-style: italic;
   }
 
@@ -97,9 +89,7 @@
 
   div.section_header {
     padding: 3px 6px 3px 6px;
-
     background-color: #8E9CB2;
-
     color: #FFFFFF;
     font-weight: bold;
     font-size: 112%;
@@ -119,40 +109,30 @@
     float: center;
   }
 
-  div.table_of_contents_item a:hover {
-    background-color: #000000;
-
-    color: #FFFFFF;
-  }
-
-  div.content_section_text a:link,
-  div.content_section_text a:visited,
-   div.content_section_text a:active {
+  div.content_section_text a:link, div.content_section_text a:visited, div.content_section_text a:active {
     background-color: #DCDFE6;
-
     color: #000000;
   }
 
   div.content_section_text a:hover {
     background-color: #000000;
-
     color: #DCDFE6;
   }
 
   </style>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
   img {
     max-width: 100%;
     height: auto;
   }
-    </style>
+  </style>
+
  </head>
 
 <body>
-
-
 
 </style>
 
@@ -160,7 +140,7 @@
         <img src="/icons/openlogo-75.png"/>
 	<br></br>
 	<h1>
-         Welcome to C.H.I.P Control Page 
+         C.H.I.P Webcam Page 
 	</h1>
       
 	<br>
@@ -171,17 +151,17 @@
 	  <p>
 	      <UL style="list-style-type:none">
 		<LI>
-		<A HREF="./cgi-bin/stats.sh">CHIP Stats</A>
+		<A HREF="./cgi-bin/stats.sh">CHIP System Snapshot</A>
 		<LI>
-		Streaming: <A HREF="http://mikeoc.ddns.net:8081">
+		Live Stream: <A HREF="http://mikeoc.ddns.net:8081">
 			Cam 1</A> <A HREF="http://mikeoc.ddns.net:8082"> Cam 2</A>
 		<LI>
 		<A HREF="http://mikeoc.ddns.net:8765">MotionEye Config</A>
 		<LI>
-		<A HREF="./motion_guide.html">Motion User Guide</A> | 
+		<A HREF="./motion_guide.html">Motion Guide</A> | 
 			<A HREF="https://github.com/ccrisan/motioneye/wiki">MotionEye Wiki</A>
 		<LI>
-		<A HREF="./motioneye">Local Camera Images</A>
+		<A HREF="./motioneye">Local Video / Images</A>
 		<LI>
           	<A HREF="https://github.com/mikeoc61/CHIP-Web-Site">GitHub Repository</A>
 	       </UL>
