cleaned up user interface

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Mikeoc Webcam Page</title>
+    <title>CHIP Webcam Page</title>
 
     <style type="text/css" media="screen">
 
@@ -155,27 +155,6 @@
          C.H.I.P Webcam Page 
 	</h1>
       
-        <div class="section_header section_header_red"> </div>
-
-        <div class="content_section_text">
-
-	  <p>
-	      <UL style="list-style-type:none">
-		<LI>
-		<A HREF="./cgi-bin/stats.sh">CHIP System Snapshot</A>
-		<LI>
-		<A HREF="http://mikeoc.ddns.net:8765">MotionEye Config</A>
-		<LI>
-		<A HREF="./motion_guide.html">Motion Guide</A> | 
-			<A HREF="https://github.com/ccrisan/motioneye/wiki">MotionEye Wiki</A>
-		<LI>
-		<A HREF="./motioneye">Local Video / Images</A>
-		<LI>
-          	<A HREF="https://github.com/mikeoc61/CHIP-Web-Site">GitHub Repository</A>
-	       </UL>
-	      </p>
-
-          </div>
 
         <div class="section_header section_header_red"> </div>
 
