added support for 3rd webcam

--- a/index.html
+++ b/index.html
@@ -154,15 +154,17 @@
 	<h1>
          C.H.I.P Webcam Page 
 	</h1>
-      
 
         <div class="section_header section_header_red"> </div>
 
-        <A HREF="http://mikeoc.ddns.net:8081">
-		<img src="http://mikeoc.ddns.net:8765/picture/1/current/" alt="Click for live" class="WebCamStill">
+        <A HREF="http://192.168.0.201:8765/picture/1/frame/">
+		<img src="http://192.168.0.201:8765/picture/1/current/" alt="Click for live" class="WebCamStill">
 		</A>
-	<A HREF="http://mikeoc.ddns.net:8082"> 
-        	<img src="http://mikeoc.ddns.net:8765/picture/2/current/" alt="Click for live" class="WebCamStill"> 
+	<A HREF="http://192.168.0.201:8765/picture/2/frame/"> 
+        	<img src="http://192.168.0.201:8765/picture/2/current/" alt="Click for live" class="WebCamStill"> 
+		</A>
+	<A HREF="http://192.168.0.210:9765/picture/1/frame/"> 
+        	<img src="http://192.168.0.210:9765/picture/1/current/" alt="Click for live" class="WebCamStill"> 
 		</A>
 
 	<p>Click image(s) to view live camera feed</p>
