added code to toggle WEMO switch via IFTTT

--- a/index.html
+++ b/index.html
@@ -157,6 +157,10 @@
 
         <div class="section_header section_header_red"> </div>
 
+	<form action="/cgi-bin/toggle.sh">
+    		<input type="submit" value="Toggle Under Stairway Light" method="get">
+	</form>
+
         <A HREF="http://192.168.0.201:8765/picture/1/frame/">
 		<img src="http://192.168.0.201:8765/picture/1/current/" alt="Click for live" class="WebCamStill">
 		</A>
